--- a/hw19.1.html
+++ b/hw19.1.html
@@ -286,7 +286,7 @@
                                 Email support,
                                 Help center access
                             </p>
-                            <button type="button" class="btn btn-success">Купить</button>
+                            <button type="button" class="btn btn-success">Кyпить</button>
                         </div>
                     </div>
                 </div>
