--- a/hw19.1.html
+++ b/hw19.1.html
@@ -304,6 +304,50 @@
                     </div>
                 </div>
             </div>
+            <header>
+            <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+                <h1 class="display-6 fw-normal text-body-emphasis">FAQ</h1>
+                <p class="d-inline-flex gap-1">
+                  <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Как купить?</a>
+                  <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Как доставить?</button>
+                  <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample2">Какая гарантия?</button>
+                </p>
+                <div class="row">
+                  <div class="col">
+                    <div class="collapse multi-collapse" id="multiCollapseExample1">
+                      <div class="card card-body">
+                          Деньгой...
+                      </div>
+                    </div>
+                  </div>
+                    <div class="col">
+                        <div class="collapse multi-collapse" id="multiCollapseExample2">
+                          <div class="card card-body">
+                              Удовольствие?
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="collapse multi-collapse" id="multiCollapseExample3">
+                          <div class="card card-body">
+                              Как титаник.
+                          </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">№</th>
+                  <th scope="col">название товара</th>
+                  <th scope="col">цена за штуку</th>
+                  <th scope="col">количество</th>
+                  <th scope="col">итоговая сумма</th>
+                  <th scope="col">статус заказа</th>
+                </tr>
+              </thead>
+
         </main>
     </div>
 </main>
