--- a/hw19.1.html
+++ b/hw19.1.html
@@ -307,7 +307,7 @@
             <header>
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
                 <h1 class="display-6 fw-normal text-body-emphasis">FAQ</h1>
-                <p class="d-inline-flex gap-1">
+                <p class="d-inline-flex gap-5">
                   <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Как купить?</a>
                   <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Как доставить?</button>
                   <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample2">Какая гарантия?</button>
@@ -340,6 +340,7 @@
               <thead>
                 <tr>
                   <th scope="col">№</th>
+
                   <th scope="col">название товара</th>
                   <th scope="col">цена за штуку</th>
                   <th scope="col">количество</th>
@@ -347,6 +348,45 @@
                   <th scope="col">статус заказа</th>
                 </tr>
               </thead>
+                <tbody>
+                    <tr>
+                      <th scope="row">1</th>
+
+                      <td>снег</td>
+                      <td>1000000000</td>
+                      <td>100000</td>
+                      <td>100000000000000</td>
+                      <td class="table-primary">новый</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">2</th>
+
+                      <td>ноги</td>
+                      <td>по договорённости</td>
+                      <td>1,5</td>
+                      <td>1,5 * на итог</td>
+                      <td class="table-success">обработан</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">3</th>
+
+                      <td>раб</td>
+                      <td>душа</td>
+                      <td>100</td>
+                      <td>???</td>
+                      <td class="table-warning">обработка</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">4</th>
+
+                      <td>жизнь</td>
+                      <td>пуля</td>
+                      <td>~7,9 млрд</td>
+                      <td>~7,9 млрд пуль</td>
+                      <td class="table-danger">отмена</td>
+                    </tr>
+                </tbody>
+            </table>
 
         </main>
     </div>
