--- a/hw19_1.html
+++ b/hw19_1.html
@@ -292,15 +292,17 @@
                         </div>
                     </div>
                     <div class="col-4">
-                        <div class="mb-3">
-                        <label for="exampleInputText1" class="form-label">Имя</label>
-                        <input type="name" class="form-control" id="exampleInputText1">
-                      </div>
-                      <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                      </div>
-                      <button type="submit" class="btn btn-primary">Отправить</button>
+                        <form>
+                            <div class="mb-3">
+                            <label for="exampleInputText1" class="form-label">Имя</label>
+                            <input name="name" type="name" class="form-control" id="exampleInputText1">
+                            </div>
+                            <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">email</label>
+                            <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                          </div>
+                          <button type="submit" class="btn btn-primary">Отправить</button>
+                       </form>
                     </div>
                 </div>
             </div>
